<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rectangle_layoutboarder_slim"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/estimatedPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/payment_options"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/payment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp">

        <RadioButton
            android:id="@+id/radio_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_wallet"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio_net_banking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net_banking" />
        <RadioButton
            android:id="@+id/radio_debit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit_card" />
        <RadioButton
            android:id="@+id/radio_credit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_card" />
        <RadioButton
            android:id="@+id/radio_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash" />


    </RadioGroup>
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle_layoutboarder"
        android:text="@string/confirm"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
