<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sos_options"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/payment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp">

        <RadioButton
            android:id="@+id/ambulance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_ambulance"
            android:checked="true" />

        <RadioButton
            android:id="@+id/driver_misbehaviour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_misbehaviour" />
        <RadioButton
            android:id="@+id/forgot_belongings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_belongings" />
        <RadioButton
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />


    </RadioGroup>
    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:textColor="@color/black" />
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:text="@string/confirm"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
