<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_any_paymentmethod"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/dialog_payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp">

        <RadioButton
            android:id="@+id/bank_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_bankaccount_details"
            android:checked="true" />

        <RadioButton
            android:id="@+id/debit_creditcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_debitcard" />


    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_payment_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_layoutboarder"
        android:text="@string/submit" />


</LinearLayout>
