<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:showIn="@layout/activity_login">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold|italic"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        />
    <ImageView android:src="@mipmap/fnb"
        android:layout_width="@dimen/img_width_height"
        android:layout_height="@dimen/img_width_height"
        android:layout_gravity="center_horizontal" />
    <!-- FirstName -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/input_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/rectangle_layoutboarder"
            android:hint="@string/first_name" />
    </android.support.design.widget.TextInputLayout>
    <!-- LastName -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/input_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/rectangle_layoutboarder"
            android:hint="@string/last_name" />
    </android.support.design.widget.TextInputLayout>
    <!-- Username -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/rectangle_layoutboarder"
            android:hint="@string/user_name" />
    </android.support.design.widget.TextInputLayout>
    <!-- Email -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/rectangle_layoutboarder"
            android:hint="@string/email_hint" />
    </android.support.design.widget.TextInputLayout>
    <!-- MobileNo -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/input_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:background="@drawable/rectangle_layoutboarder"
            android:hint="@string/mobile_no_hint" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/rectangle_layoutboarder"
            android:hint="@string/password_hint"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Re Enter Password -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/input_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/rectangle_layoutboarder"
            android:hint="@string/reenter_password_hint" />
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rectangle_layoutboarder"
        android:text="@string/next"/>

</LinearLayout>
</ScrollView>
